Fixed unvisible white Cancel buttons

--- a/public/overrides.css
+++ b/public/overrides.css
@@ -269,7 +269,7 @@ button.btn:hover {
 
 button.btn-danger,
 button.btn-danger:hover {
-  background: var(--danger) !important;
+  background: var(--danger);
 }
 
 button.btn.cancel:hover {
